[project] add service manager
